2013-03-15 Emilie SAGNIEZ  <emilie@in-cite.net>
	* First version stable
	* Initial import

2013-03-12  Plan.Net France  <typo3@plan-net.fr>

	* Initial code generated with kickstarter