@@ -12,7 +12,7 @@
 	<ul>
 		<li>###DELETE_FILTER###</li><!-- ###SUBPART_CATEGORIES### begin -->
 	<!-- ###SUBPART_CATEGORY### begin -->
-		<li><a href="###CATEGORY_LINK###" class="damcat###CATEGORY_UID###">###CATEGORY_TITLE###</a><!-- ###SUBPART_SUBCATEGORIES### begin -->
+		<li ###HAS_SUBCATEGORIES###><a href="###CATEGORY_LINK###" class="damcat###CATEGORY_UID###">###CATEGORY_TITLE###</a><!-- ###SUBPART_SUBCATEGORIES### begin -->
 			<ul><!-- ###SUBPART_SUBCATEGORY### begin -->
 				<li><a href="###SUBCATEGORY_LINK###" class="damcat###SUBCATEGORY_UID###">###SUBCATEGORY_TITLE###</a>
 				###SUBCATEGORY_CHILDREN###</li><!-- ###SUBPART_SUBCATEGORY### end -->
