@@ -1,4 +1,8 @@
-2013-03-15 Emilie SAGNIEZ  <emilie@in-cite.net>
+2013-04-02 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
+	* Add classes for categories filter with subcategories
+	* Reorganize typoscript
+	
+2013-03-15 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
 	* First version stable
 	* Initial import
 
